--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         <br>
         <p>Welcome to HTML</p>
                <a href="composition/index.html">Go to my composition</a>
+               <br>
                <a/>
                 <a href="composition2/index.html">Go to my composition2</a>
+                <br>
+                <a href="composition3/Index.html">Go to my composition3</a>
             </a>
           
         </p>
