--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Hello world</h1>
+        <h1>Hey</h1>
         <br><br>
         <hr><hr>
         <br>
-        <p>Welcome to HTML</p>
-               <a href="composition/index.html">Go to my composition</a>
+        <p>Welcome</p>
+               <a href="composition/index.html">Darling</a>
                <br>
                <a/>
-                <a href="composition2/index.html">Go to my composition2</a>
+                <a href="composition2/index.html">Sweatheart</a>
                 <br>
-                <a href="composition3/Index.html">Go to my composition3</a>
+                <a href="composition3/index.html">Honey</a>
             </a>
           
         </p>
