--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <html>
     <head>
         <title>Hello World</title>
+        <link href="sweety.css" rel="stylesheet">
+        <!--für FF, chrome, opera-->
+        <link rel="icon" type="image/png" href="sexyicon.png">
+<link rel="icon" type="image/png" href="sexyicon.png">
+
+<!-- for IE -->
+<link rel="icon" type="image/x-icon" href="sexyicon.png" >
+<link rel="shortcut icon" type="image/x-icon" href="sexyicon.png"/>
     </head>
     <body>
         <h1>Hey</h1>
         <br><br>
         <hr><hr>
         <br>
-        <p>Welcome</p>
-               <a href="composition/index.html">Darling</a>
-               <br>
-               <a/>
-                <a href="composition2/index.html">Sweatheart</a>
-                <br>
-                <a href="composition3/index.html">Honey</a>
-            </a>
-          
+        <p class="deinemuddda">Welcome</p>
+        <br>
+       
+        <p class="curly"><a href="composition/index.html">Darling</a>
+        <br>
+        <a href="composition2/index.html">Sweatheart</a>
+        <br>
+        <a href="composition3/index.html">Honey</a>
         </p>
-    </body>
+
+                </body>
 </html>
