--- a/module/index.html
+++ b/module/index.html
@@ -7,15 +7,15 @@
 	<body>
 
 		<!-- This anchor should link to your ARTIFACT -->
-		<a href="http://virtualartifacts.github.io/composition/index.html">
+		<a href="http://lizholland.github.io/index.html">
 
 			<div class="module">
 
 				<!-- Placing some text on the stage -->
-				<p>Some text</p>
+				<p>Liz Holland</p>
 
 				<!-- Placing an image on the stage -->
-				<img src="cat.jpg">
+				<img src="http://lizholland.github.io/sexyicon.png" alt="<sexyicon" height="40" width="440">
 
 				<!-- Drawing a shape on the stage -->
 				<div class="box"></div>
