--- a/module/index.html
+++ b/module/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>MODULE</title>
+		<title>I</title>
 		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
