--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hello World</title>
+        <title>HEYTHERE</title>
         <link href="sweety.css" rel="stylesheet">
         <!--für FF, chrome, opera-->
         <link rel="icon" type="image/png" href="sexyicon.png">
